small thing that bothers me (a suggestion)

--- a/src/AppBundle/Resources/views/Default/rulesreference.html.twig
+++ b/src/AppBundle/Resources/views/Default/rulesreference.html.twig
@@ -1484,19 +1484,19 @@
 
 <h3 id="1._Plot_phase">1. Plot phase</h3>
 
-<h4 id="1.1_Plot_phase_begins">1.1 Plot phase begins</h4>
+<h4 id="1.1_Plot_phase_begins">1.1. Plot phase begins</h4>
 
 <p>This step formalizes the beginning of the plot phase. As this is the first framework event of the round, it also formalizes the beginning of a new game round.</p>
 
 <p>The beginning of a phase is an important game milestone that may be referenced in card text, either as a point at which an ability may or must resolve, or as a point at which a lasting effect or constant ability begins or expires.</p>
 
-<h4 id="1.2_Choose_plots">1.2 Choose plots</h4>
+<h4 id="1.2_Choose_plots">1.2. Choose plots</h4>
 
 <p>Each player looks at the cards remaining in his or her plot deck, and chooses one to reveal during the next framework step. The chosen plot is placed facedown apart from the plot deck, and not revealed to other players during this step.</p>
 
 <p>Once each player has chosen a plot and placed it facedown away from his or her plot deck, this step is complete.</p>
 
-<h4 id="1.3_Reveal_plots">1.3 Reveal plots</h4>
+<h4 id="1.3_Reveal_plots">1.3. Reveal plots</h4>
 
 <p>The players simultaneously reveal each of the plot cards that were chosen during step 1.2 by turning those cards faceup.</p>
 
@@ -1516,7 +1516,7 @@
 
 <p><em>TIMING NOTE: Any reaction abilities that read "After you reveal a plot card" or "After a player reveals a plot card" may be initiated after the completion of the above step III.</em></p>
 
-<h4 id="1.4_Select_titles">1.4 Select titles (melee format only)</h4>
+<h4 id="1.4_Select_titles">1.4. Select titles (melee format only)</h4>
 
 <p>If the players are playing a melee game, they now select titles for the round. In a joust game, this framework step is skipped.</p>
 
@@ -1526,7 +1526,7 @@
 
 <p>If more than six players are playing in a melee game, any player who would be selecting a title from an empty title pool plays the round without a title.</p>
 
-<h4 id="1.5_Plot_phase_ends">1.5 Plot phase ends</h4>
+<h4 id="1.5_Plot_phase_ends">1.5. Plot phase ends</h4>
 
 <p>This step formalizes the end of the plot phase.</p>
 
@@ -1534,27 +1534,27 @@
 
 <h3 id="2._Draw_phase">2. Draw phase</h3>
 
-<h4 id="2.1_Draw_phase_begins">2.1 Draw phase begins</h4>
+<h4 id="2.1_Draw_phase_begins">2.1. Draw phase begins</h4>
 
 <p>This step formalizes the beginning of the draw phase.</p>
 
-<h4 id="2.2_Draw">2.2 Draw</h4>
+<h4 id="2.2_Draw">2.2. Draw</h4>
 
 <p>Each player must simultaneously draw 2 cards from the top of his or her draw deck.</p>
 
 <p><strong>Note:</strong> A player is eliminated from the game immediately if there are no cards remaining in his or her deck. If all remaining players are eliminated while fulfilling this step, the first player determines which of those players is the winner of the game.</p>
 
-<h4 id="2.3_Draw_phase_ends">2.3 Draw phase ends</h4>
+<h4 id="2.3_Draw_phase_ends">2.3. Draw phase ends</h4>
 
 <p>This step formalizes the end of the draw phase.</p>
 
 <h3 id="3._Marshaling_phase">3. Marshaling phase</h3>
 
-<h4 id="3.1_Marshaling_phase_begins">3.1 Marshaling phase begins</h4>
+<h4 id="3.1_Marshaling_phase_begins">3.1. Marshaling phase begins</h4>
 
 <p>This step formalizes the beginning of the marshaling phase.</p>
 
-<h4 id="3.2_Active_player_collects_income">3.2 Active player collects income</h4>
+<h4 id="3.2_Active_player_collects_income">3.2. Active player collects income</h4>
 
 <p>The first player is first to be the active player in the marshaling phase.</p>
 
@@ -1580,23 +1580,23 @@
 
 <p>Action opportunities continue clockwise in player order among the players until all players consecutively pass, at which point the action window closes. As such, there is no upper limit on the number of opportunities an active player may have to marshal his or her cards.</p>
 
-<h4 id="3.3_Next_player_becomes_active_player">3.3 Next player becomes active player</h4>
+<h4 id="3.3_Next_player_becomes_active_player">3.3. Next player becomes active player</h4>
 
 <p>If upon reaching this step all players have been the active player this phase, proceed to step 3.4.</p>
 
 <p>Otherwise, the next player (in player order) becomes the active player. Return to step 3.2.</p>
 
-<h4 id="3.4_Marshaling_phase_ends">3.4 Marshaling phase ends</h4>
+<h4 id="3.4_Marshaling_phase_ends">3.4. Marshaling phase ends</h4>
 
 <p>This step formalizes the end of the marshaling phase.</p>
 
 <h3 id="4._Challenges_phase">4. Challenges phase</h3>
 
-<h4 id="4.1_Challenges_phase_begins">4.1 Challenges phase begins</h4>
+<h4 id="4.1_Challenges_phase_begins">4.1. Challenges phase begins</h4>
 
 <p>This step formalizes the beginning of the challenges phase.</p>
 
-<h4 id="4.2_Active_player_may_initiate_a_challenge">4.2 Active player may initiate a challenge</h4>
+<h4 id="4.2_Active_player_may_initiate_a_challenge">4.2. Active player may initiate a challenge</h4>
 
 <p>The first player is the first to be the active player in the challenges phase.</p>
 
@@ -1616,11 +1616,11 @@
 
 <p><em>TIMING NOTE: Once a challenge is initiated, it is considered to be resolving until the challenge ends in step 4.2.6.</em></p>
 
-<h4 id="4.2.1_Defending_player_declares_defenders">4.2.1 Defending player declares defenders</h4>
+<h4 id="4.2.1_Defending_player_declares_defenders">4.2.1. Defending player declares defenders</h4>
 
 <p>The defending player has the option to declare eligible characters he or she controls as defenders, and kneels them simultaneously. In order to be eligible as a defender, a character must have a challenge icon that corresponds with the type of challenge that is currently underway, and the character must be standing. A character that was chosen as a stealth target in step 4.2 is not eligible to be declared as a defender.</p>
 
-<h4 id="4.2.2_Compare_STR_to_determine_challenge_winner">4.2.2 Compare STR to determine challenge winner</h4>
+<h4 id="4.2.2_Compare_STR_to_determine_challenge_winner">4.2.2. Compare STR to determine challenge winner</h4>
 
 <p>Compare the combined STR of all attacking characters (plus any active modifiers) to the combined STR of all defending characters (plus any active modifiers) to determine the challenge winner.</p>
 
@@ -1630,7 +1630,7 @@
 
 <p><em>TIMING NOTE: Reactions to winning and/or losing the challenge may be initiated after the completion of this step.</em></p>
 
-<h4 id="4.2.3_Gain_challenge_bonuses">4.2.3 Gain challenge bonuses</h4>
+<h4 id="4.2.3_Gain_challenge_bonuses">4.2.3. Gain challenge bonuses</h4>
 
 <p>If the challenge was unopposed in the previous step, the attacking player gains 1 power for his or her faction card for winning an unopposed challenge. This is known as an unopposed bonus.</p>
 
@@ -1638,7 +1638,7 @@
 
 <p>All challenge bonuses a player receives for this step are gained simultaneously.</p>
 
-<h4 id="4.2.4_Apply_claim_result.">4.2.4 Apply claim result.</h4>
+<h4 id="4.2.4_Apply_claim_result.">4.2.4. Apply claim result.</h4>
 
 <p>If the attacking player is the challenge winner, the claim result of the challenge is now applied. The claim result for each challenge type resolves as follows, using the claim value on the attacking player's revealed plot card (and incorporating all relevant claim modifiers):</p>
 
@@ -1650,65 +1650,65 @@
 
 <p>If the defending player wins the challenge, no claim result occurs.</p>
 
-<h4 id="4.2.5_Process_challenge_resolution_keywords">4.2.5 Process challenge resolution keywords</h4>
+<h4 id="4.2.5_Process_challenge_resolution_keywords">4.2.5. Process challenge resolution keywords</h4>
 
 <p>Challenge resolution keywords (e.g. insight, intimidate, pillage, and renown) take effect at this time. The first player determines the order, by keyword type, in which these keywords are processed. The first player chooses one keyword type (for instance, renown), and then all relevant instances of that keyword resolve simultaneously. The first player then chooses the next keyword type to resolve, and so on, until all keyword types that need to resolve upon the resolution of the challenge have been processed.</p>
 
-<h4 id="4.2.6_Challenge_ends">4.2.6 Challenge ends</h4>
+<h4 id="4.2.6_Challenge_ends">4.2.6. Challenge ends</h4>
 
 <p>This step formalizes the end of the challenge. All characters that were participating in the challenge are no longer participating. Proceed to the action window between framework steps 4.1 and 4.2.</p>
 
-<h4 id="4.3_Next_player_becomes_active_player">4.3 Next player becomes active player</h4>
+<h4 id="4.3_Next_player_becomes_active_player">4.3. Next player becomes active player</h4>
 
 <p>If the active player does not declare a challenge, or cannot initiate any more challenges, the next player in player order becomes the active player. Proceed to the player action window between framework steps 4.1 and 4.2.</p>
 
 <p>If all players have been the active player this phase, proceed to 4.4.</p>
 
-<h4 id="4.4_Challenges_phase_ends">4.4 Challenges phase ends</h4>
+<h4 id="4.4_Challenges_phase_ends">4.4. Challenges phase ends</h4>
 
 <p>This step formalizes the end of the challenges phase.</p>
 
 <h3 id="5._Dominance_phase">5. Dominance phase</h3>
 
-<h4 id="5.1_Dominance_phase_begins">5.1 Dominance phase begins</h4>
+<h4 id="5.1_Dominance_phase_begins">5.1. Dominance phase begins</h4>
 
 <p>This step formalizes the beginning of the dominance phase.</p>
 
-<h4 id="5.2_Determine_dominance">5.2 Determine dominance</h4>
+<h4 id="5.2_Determine_dominance">5.2. Determine dominance</h4>
 
 <p>Each player simultaneously counts the total combined STR of all of his or her standing characters, and adds 1 to this total for each gold token in his or her gold pool. The player with the highest total wins dominance for the round, and gains 1 power for his or her faction. <em>(Note: a player may win dominance with no standing characters.)</em></p>
 
 <p>If there is a tie for the highest total, no player wins dominance.</p>
 
-<h4 id="5.3_Dominance_phase_ends">5.3 Dominance phase ends</h4>
+<h4 id="5.3_Dominance_phase_ends">5.3. Dominance phase ends</h4>
 
 <p>This step formalizes the end of the dominance phase.</p>
 
 <h3 id="6._Standing_phase">6. Standing phase</h3>
 
-<h4 id="6.1_Standing_phase_begins">6.1 Standing phase begins</h4>
+<h4 id="6.1_Standing_phase_begins">6.1. Standing phase begins</h4>
 
 <p>This step formalizes the beginning of the standing phase.</p>
 
-<h4 id="6.2_Stand_cards">6.2 Stand cards</h4>
+<h4 id="6.2_Stand_cards">6.2. Stand cards</h4>
 
 <p>Simultaneously stand each kneeling card in play.</p>
 
-<h4 id="6.3_Standing_phase_ends">6.3 Standing phase ends</h4>
+<h4 id="6.3_Standing_phase_ends">6.3. Standing phase ends</h4>
 
 <p>This step formalizes the end of the standing phase.</p>
 
 <h3 id="7._Taxation_phase">7. Taxation phase</h3>
 
-<h4 id="7.1_Taxation_phase_begins">7.1 Taxation phase begins</h4>
+<h4 id="7.1_Taxation_phase_begins">7.1. Taxation phase begins</h4>
 
 <p>This step formalizes the beginning of the taxation phase.</p>
 
-<h4 id="7.2_Return_unspent_gold">7.2 Return unspent gold</h4>
+<h4 id="7.2_Return_unspent_gold">7.2. Return unspent gold</h4>
 
 <p>Each player simultaneously returns all unspent gold in his or her gold pool to the treasury.</p>
 
-<h4 id="7.3_Check_reserve">7.3 Check reserve</h4>
+<h4 id="7.3_Check_reserve">7.3. Check reserve</h4>
 
 <p>Each player, in player order, checks his or her reserve.</p>
 
@@ -1716,11 +1716,11 @@
 
 <p>A player is not permitted to discard cards from his or her hand at this time while at or below his or her reserve value.</p>
 
-<h4 id="7.4_Return_melee_title_cards">7.4 Return melee title cards (melee format only)</h4>
+<h4 id="7.4_Return_melee_title_cards">7.4. Return melee title cards (melee format only)</h4>
 
 <p>Each player returns his or her title to the title pool. All titles leave play simultaneously. (In a joust game, this step is skipped.)</p>
 
-<h4 id="7.5_Taxation_phase_ends">7.5 Taxation phase ends</h4>
+<h4 id="7.5_Taxation_phase_ends">7.5. Taxation phase ends</h4>
 
 <p>This step formalizes the end of the taxation phase.</p>
 
