Rules - line fixed

--- a/src/AppBundle/Resources/views/Default/rulesreference.en.html.twig
+++ b/src/AppBundle/Resources/views/Default/rulesreference.en.html.twig
@@ -875,7 +875,8 @@
 <p>A card's owner is the player whose deck held the card at the start of the game.</p>
 
 <ul>
-<li>  Cards by default enter play under their owner's control. Some abilities may cause cards to change control during a game.*   A player controls the cards located in his or her out of play game areas (such as the hand, deck, discard pile, and dead pile).</li>
+<li>  Cards by default enter play under their owner's control. Some abilities may cause cards to change control during a game.</li>
+<li>  A player controls the cards located in his or her out of play game areas (such as the hand, deck, discard pile, and dead pile).</li>
 <li>  If a card would enter an out of play area of a player who does not own the card, the card is placed in its owner's equivalent out of play area instead. (For all associated card ability and framework effect purposes, the card is considered to have entered that opponent's out of play area, and only the physical placement of the card is adjusted.)</li>
 <li>  If a participating character changes control during the resolution of a challenge, it is immediately removed from the challenge.</li>
 </ul>
