faq and tournament regulations added fix #78

--- a/src/AppBundle/Resources/views/Default/tournamentregulations.en.html.twig
+++ b/src/AppBundle/Resources/views/Default/tournamentregulations.en.html.twig
@@ -5,78 +5,9 @@ th			{ background-color: #ccc }
 td			{ text-align:center; border: 1px solid black; border-collapse:collapse }
 </style>
 
-<h1>Table of Contents</h1>
-<nav>
-<ol>
-<li><a href="#Tournament_Participant_Roles">Tournament Participant Roles</a></li>
-	<ol>
-	<li><a href="#Organizer">Organizer</a></li>
-	<li><a href="#Marshal">Marshal</a></li>
-	<li><a href="#Judge">Judge</a></li>
-	<li><a href="#Player">Player</a></li>
-	<li><a href="#Spectator">Spectator</a></li>
-	<li><a href="#Leader_Participation">Leader Participation</a></li>
-	<li><a href="#Conduct">Conduct</a></li>
-		<ol>
-		<li><a href="#Unsporting_Conduct">Unsporting Conduct</a></li>
-		</ol>
-	</ol>
-<li><a href="#Tournament_Materials">Tournament Materials</a></li>
-	<ol>
-	<li><a href="#Organizer_Materials">Organizer Materials</a></li>
-	<li><a href="#Player_Materials">Player Materials</a></li>
-		<ol>
-		<li><a href="#Deck_Building">Deck Building</a></li>
-		<li><a href="#Deck_Lists">Deck Lists</a></li>
-		<li><a href="#Card_Sleeves">Card Sleeves</a></li>
-		<li><a href="#Lost_and_Damaged_Cards">Lost and Damaged Cards</a></li>
-		<li><a href="#Tokens">Tokens</a></li>
-		<li><a href="#Legal_Products">Legal Products</a></li>
-		</ol>
-	</ol>
-<li><a href="#Tournament_Play">Tournament Play</a></li>
-	<ol>
-	<li><a href="#Tournament_Setup">Tournament Setup</a></li>
-	<li><a href="#Game_Setup">Game Setup</a></li>
-	<li><a href="#Missed_Opportunities">Missed Opportunities</a></li>
-	<li><a href="#Taking_Notes_and_Outside_Material">Taking Notes and Outside Material</a></li>
-	</ol>
-<li><a href="#Tournament_Concepts">Tournament Concepts</a></li>
-	<ol>
-	<li><a href="#Tournament_Round_Times">Tournament Round Times</a></li>
-	<li><a href="#Pairings">Pairings</a></li>
-		<ol>
-		<li><a href="#Swiss_Rounds">Swiss Rounds</a></li>
-		<li><a href="#Progression_Cut">Progression Cut</a></li>
-		<li><a href="#Single_Elimination_Rounds">Single Elimination Rounds</a></li>
-		</ol>
-	<li><a href="#End_of_Round">End of Round</a></li>
-		<ol>
-		<li><a href="#Going_to_Time">Going to Time</a></li>
-		</ol>
-	<li><a href="#Tournament_Points">Tournament Points</a></li>
-		<ol>
-		<li><a href="#Tiebreakers">Tiebreakers</a></li>
-		</ol>
-	</ol>
-<li><a href="#Tournament_Structures">Tournament Structures</a></li>
-	<ol>
-	<li><a href="#Basic_Structure">Basic Structure</a></li>
-	<li><a href="#Advanced_Structure">Advanced Structure</a></li>
-	<li><a href="#Custom_Structure">Custom Structure</a></li>
-	</ol>
-<li><a href="#Tournament_Tiers">Tournament Tiers</a></li>
-	<ol>
-	<li><a href="#Relaxed">Relaxed</a></li>
-	<li><a href="#Formal">Formal</a></li>
-	<li><a href="#Premier">Premier</a></li>
-	</ol>
-</ol>
-</nav>
-
 <div style="text-align:justify">
 
-<h1 ="Tournament_Regulations">Tournament Regulations - Version 1.2 / Effective 11.01.2016</h1>
+<h1 id="Tournament_Regulations">Tournament Regulations - Version 1.2 / Effective 11.01.2016</h1>
 
 <p><em>All changes and additions made to this document since the previous version are marked in <span class="new">red</span>.</em></p>
 
