--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -66,7 +66,15 @@
             {#
             <li class="hidden-sm"><a href="{{ path('card_reviews_list') }}">Reviews</a></li>
             #}
-            <li><a href="{{ path('rules') }}">{{ 'nav.rules' | trans}}</a></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">{{ 'nav.rules' | trans}} <span class="caret"></span></a>
+              <ul class="dropdown-menu" role="menu">
+                <li><a href="{{ path('rulesreference') }}">{{ 'nav.rulesreference' | trans}}</a></li>
+                <li><a href="{{ path('faq') }}">{{ 'nav.faq' | trans}}</a></li>
+                <li><a href="{{ path('tournamentregulations') }}">{{ 'nav.tournamentregulations' | trans}}</a></li>
+              </ul>
+            </li>
+            
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li class="dropdown hidden-xs hidden-lg">
