--- a/src/AppBundle/Resources/views/Default/faq.en.html.twig
+++ b/src/AppBundle/Resources/views/Default/faq.en.html.twig
@@ -10,7 +10,7 @@ i		{ font-weight:bold }
 
 <p>This document contains card clarification, errata, rule clarifications, frequently asked questions, and quick reference material for <em>A Game of Thrones: The Card Game</em>. The most recent version of this document is considered a supplement to the <em>A Game of Thrones: The Card Game</em> Tournament Regulations and the <em>A Game of Thrones: The Card Game</em> <a href="http://thronesdb.com/rules" target="_blank">Rules Reference</a>. All changes and additions to this document since the previous version are marked in <span class="new">red</span>.</p>
 
-<p><b>New Content (v1.1):</b> <a href="#Notes_and_Errata">Notes and Errata</a>, <a href="#Rulings_and_Clarifications">Rulings and Clarifications</a>, <a href="#Frequently_Asked_Questions">Frequently Asked Questions</a>, <a href="#Card_Legality">Card Legality</a>, <a href="#Definitions_and_Terms">Definitions and Terms</a>.</p>
+<p><b>New Content (v1.1):</b> <a href="#Notes_and_Errata">Notes and Errata</a>, <a href="#Player_Choices_While_Initiating_Abilities">Rulings and Clarifications</a>, <a href="#FAQ_13">Frequently Asked Questions</a>, <a href="#Card_Legality">Card Legality</a>, <a href="#Derived_Information">Definitions and Terms</a>.</p>
 
 <p class="mplain"><b>Notes</b> and <b>Related</b> cards added by <b>mplain</b>.</p>
 
@@ -18,19 +18,17 @@ i		{ font-weight:bold }
 
 <p>This section contains notes and errata pertaining to specific cards or sections of the rulebook. The document version number in which an entry first appeared is listed with that entry in order to establish a history of when each change was made.<p>
 
-<span class="new">
-<p>Errata overrides the originally printed information on the card it applies to. Unless errata for a card appears below, the original English non-draft product printing of that card and all of its information is considered accurate, and overrides all other printings. This includes translated cards, promotional or organized play cards, and printings which may appear in alternate products.</p>
-</span>
+<p><span class="new">Errata overrides the originally printed information on the card it applies to. Unless errata for a card appears below, the original English non-draft product printing of that card and all of its information is considered accurate, and overrides all other printings. This includes translated cards, promotional or organized play cards, and printings which may appear in alternate products.</span></p>
 
 <h2 id="Rulebook_Errata">Rulebook Errata</h2>
 
 <p><b>(v1.0) Rules Reference page 26, column 1, paragraph 9</b><br>
-The phrase "all relevant reserve modifiers" should read: "all relevant initiative modifiers."</p>
+The phrase "<em>all relevant <u>reserve</u> modifiers</em>" should read: "<em>all relevant <u>initiative</u> modifiers.</em>"</p>
 
 <h2 id="Card_Errata">Card Errata</h2>
 
 <p><b>(v1.0) <a href="http://thronesdb.com/card/02063" target="_blank">Ser Horas Redwyne</a> (<em>Westeros</em> 63)</b><br>
-Should read: "...choose and stand a <i>Lady</i> chara<u>c</u>ter."</p>
+Should read: "<em>...choose and stand a <i>Lady</i> chara<u>c</u>ter.</em>"</p>
 
 <h1 id="Definitions_and_Terms">Definitions and Terms</h1>
 
@@ -141,7 +139,7 @@ Should read: "...choose and stand a <i>Lady</i> chara<u>c</u>ter."</p>
 <p class="mplain"><b>Related:</b> "Take control" effects, 
 					<a href="http://thronesdb.com/card/01069" target="_blank">Euron Greyjoy</a>, 
 					<a href="http://thronesdb.com/card/01129" target="_blank">Yoren</a>, 
-					<a href="http://thronesdb.com/card/04046" target="_blank">Night Gathers...</a>.</p>
+					<a href="http://thronesdb.com/card/04046" target="_blank">Night Gathers...</a></p>
 
 <h3 id="Control_of_Tokens">(1.4) Control of Tokens</h3>
 
