--- a/src/AppBundle/Resources/views/Default/faq.en.html.twig
+++ b/src/AppBundle/Resources/views/Default/faq.en.html.twig
@@ -201,9 +201,7 @@ Should read: "<em>...choose and stand a <i>Lady</i> chara<u>c</u>ter.</em>"</p>
 									
 <h1 id="Card_Legality">Card Legality</h1>
 
-<p>For most Relaxed and Formal tier events, a product is legal from the time of its release until the time of its rotation (if applicable). For Premier tier events (such as the North American and World Championships), product becomes legal 11 days after its official release to ensure that all competitors have sufficient opportunity to obtain and familiarize themselves with all products in the defined pool. For a current list of legal product, see the FFG website, here:</p>
-
-<a href="https://www.fantasyflightgames.com/en/op/legality/" target="_blank">https://www.fantasyflightgames.com/en/op/legality/</a>
+<p>For most Relaxed and Formal tier events, a product is legal from the time of its release until the time of its rotation (if applicable). For Premier tier events (such as the North American and World Championships), product becomes legal 11 days after its official release to ensure that all competitors have sufficient opportunity to obtain and familiarize themselves with all products in the defined pool. For a current list of legal product, see the FFG website, here: <a href="https://www.fantasyflightgames.com/en/op/legality/" target="_blank">https://www.fantasyflightgames.com/en/op/legality/</a></p>
 
 <h3 id="2016_World_Championships"><i>2016 World Championships</i></h3>
 
