--- a/src/AppBundle/Resources/views/Default/tournamentregulations.en.html.twig
+++ b/src/AppBundle/Resources/views/Default/tournamentregulations.en.html.twig
@@ -7,7 +7,8 @@ td		{ text-align:center; border: 1px solid black; border-collapse:collapse }
 
 <div style="text-align:justify">
 
-<h1 id="Tournament_Regulations">Tournament Regulations - Version 1.2 / Effective 11.01.2016</h1>
+<h1 id="Tournament_Regulations">Tournament Regulations</h1>
+<h3>Version 1.2, effective 11.01.2016</h3>
 
 <p><em>All changes and additions made to this document since the previous version are marked in <span class="new">red</span>.</em></p>
 
