--- a/src/AppBundle/Resources/views/Default/faq.en.html.twig
+++ b/src/AppBundle/Resources/views/Default/faq.en.html.twig
@@ -329,13 +329,13 @@ Should read: "<em>...choose and stand a <i>Lady</i> chara<u>c</u>ter.</em>"</p>
 <p>Upon the expiration or cessation of a control change effect, control of the card reverts back to the player with the nextmost recent take control effect that would affect on the card. (If no player possesses a control effect that would affect the card, control reverts back to the card's owner.) In this example, when the Ward card leaves play, control of the character reverts back to the player who had gained control of it with Take the Black.<p>
 
 <span class="new">
-<h3 id="FAQ_13">Order of Procerssing Keywords</h3>
+<h3 id="FAQ_13">Resolving Keywords</h3>
 
 <p><i>If I win a challenge in which I control both <a href="http://thronesdb.com/card/02049" target="_blank">Ser Gregor Clegane</a> (Westeros, 49) and <a href="http://thronesdb.com/card/01069" target="_blank">Euron Crow's Eye</a> (Core, 69), which player chooses the order in which their pillage abilities resolve?</i></p>
 
 <p>As the controller of the two characters, you choose the order in which their pillage abilities resolve. Although the first player determines the order in which keywords are processed, by type, the first player does not determine the order in which keywords resolve within each type. Because each instance of pillage is optional, the controller of the characters with pillage chooses in which order the pillage abilities resolve.</p>
 
-<h3 id="FAQ_14">Order of Procerssing Keywords #2</h3>
+<h3 id="FAQ_14">Processing Keywords</h3>
 
 <p><i>What happens if a character gains a challenge resolution keyword while another challenge resolution keyword is being processed?</i></p>
 
