updated table headers to sort on consolidated attributes.

--- a/src/AppBundle/Resources/views/Builder/tab-pane-build.html.twig
+++ b/src/AppBundle/Resources/views/Builder/tab-pane-build.html.twig
@@ -70,8 +70,8 @@
 				<tr>
 					<th style="min-width:85px"><a href="#" data-sort="indeck">{{ 'card.info.quantity' | trans}}</a></th>
 					<th><a href="#" data-sort="name">{{ 'card.info.name' | trans}}</a></th>
-					<th class="cost"><a href="#" data-sort="cost|income" title="{{ 'card.info.costgold' | trans}}">{{ 'card.info.short.costgold' | trans}}</a></th>
-					<th class="strength"><a href="#" data-sort="strength|initiative" title="{{ 'card.info.strini' | trans}}">{{ 'card.info.short.strini' | trans}}</a></th>
+					<th class="cost"><a href="#" data-sort="ci" title="{{ 'card.info.costgold' | trans}}">{{ 'card.info.short.costgold' | trans}}</a></th>
+					<th class="strength"><a href="#" data-sort="si" title="{{ 'card.info.strini' | trans}}">{{ 'card.info.short.strini' | trans}}</a></th>
 					<th class="type"><a href="#" data-sort="type_code" title="{{ 'card.info.type' | trans}}">{{ 'card.info.short.type' | trans}}</a></th>
 					<th class="faction"><a href="#" data-sort="faction_code" title="{{ 'card.info.faction' | trans}}">{{ 'card.info.short.faction' | trans}}</a></th>
 				</tr>
