--- a/src/AppBundle/Resources/views/Export/octgn.xml.twig
+++ b/src/AppBundle/Resources/views/Export/octgn.xml.twig
@@ -4,9 +4,9 @@
     <card qty="1" id="{{ deck.faction.octgnId }}">{{ deck.faction.name }}</card>
   </section>
   <section name="Agenda" shared="False">
-{% if deck.agenda is not null %}
-    <card qty="1" id="{{ deck.agenda.octgnId }}">{{ deck.agenda.name }}</card>
-{% endif %}
+{% for agenda in deck.agendas %}
+    <card qty="1" id="{{ agenda.card.octgnId }}">{{ agenda.card.name }}</card>
+{% endfor %}
   </section>
   <section name="Plots" shared="False">
 {% for slot in deck.slots_by_type.plot %}
