--- a/src/AppBundle/Resources/views/Default/tournamentregulations.en.html.twig
+++ b/src/AppBundle/Resources/views/Default/tournamentregulations.en.html.twig
@@ -20,7 +20,7 @@ td		{ text-align:center; border: 1px solid black; border-collapse:collapse }
 
 <p>Tournaments are played using the rules provided in the <em>A Game of Thrones: The Card Game</em> Rules Reference and FAQ, both of which may be downloaded from the <em>A Game of Thrones: The Card Game</em> page of our website at any time. Additional rules for playing games in a tournament are detailed in this document.</p>
 
-<p>This document explains important tournament concepts and provides the details for Joust tournaments, where players come to a tournament with pre-made decks and are paired in head-to-head games. When running an event with a different format, please also read the Alternate Format Regulations to learn any important differences..</p>
+<p>This document explains important tournament concepts and provides the details for Joust tournaments, where players come to a tournament with pre-made decks and are paired in head-to-head games. When running an event with a different format, please also read the Alternate Format Regulations to learn any important differences.</p>
 
 <h1 id="Tournament_Participant_Roles">Tournament Participant Roles</h1>
 
