display 404 error page

--- a/app/Resources/TwigBundle/views/Exception/error404.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error404.html.twig
@@ -4,6 +4,6 @@
 
 {% block body %}
 <div class="container">
-    <div class="alert alert-danger" role="alert">That page doesn't exist!</div>
+    <div class="alert alert-danger" role="alert">Page not found</div>
 </div>
 {% endblock %}
