--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -89,6 +89,7 @@
                 <a href="#" class="disabled"><span class="fa fa-user"></span></a>
             </li>
             <!-- locale selection -->
+            {% if _route is not empty %}
             <li class="dropdown">
               <a class="dropdown-toggle" data-toggle="dropdown">
                 <span class="lang-sm" lang="{{ app.request.locale | default(default_locale) }}"></span>
@@ -107,6 +108,7 @@
                 {% endfor %}
               </ul>
             </li>
+            {% endif %}
           </ul>
           <form class="navbar-form navbar-right visible-lg-block visible-xs-block external" action="{{ path('cards_find') }}" target="_blank">
             <div class="form-group">
