--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -89,7 +89,7 @@
                 <a href="#" class="disabled"><span class="fa fa-user"></span></a>
             </li>
             <!-- locale selection -->
-            {% if _route is not empty %}
+            {% if _route is not defined or _route is not empty %}
             <li class="dropdown">
               <a class="dropdown-toggle" data-toggle="dropdown">
                 <span class="lang-sm" lang="{{ app.request.locale | default(default_locale) }}"></span>
