link to decklists in card page, fix #118

--- a/src/AppBundle/Resources/views/Search/display-card.html.twig
+++ b/src/AppBundle/Resources/views/Search/display-card.html.twig
@@ -32,6 +32,7 @@
 							{% include 'AppBundle:Search:card-pack.html.twig' %}
         				</div>
         			</div>
+                                <p>Link: <a href="{{ path('decklists_list',{type:'find',_locale:app.request.locale,'cards[]':card.code}) }}">Decklists</a></p>
         		</div>
         	</div>
         	<div class="col-sm-5" style="margin-bottom:2em">
