--- a/src/AppBundle/Resources/views/Reviews/reviews.html.twig
+++ b/src/AppBundle/Resources/views/Reviews/reviews.html.twig
@@ -31,7 +31,7 @@
 {% if reviews|length > 0 %}{% for i in 0..reviews|length-1 %}{% set review = reviews[i] %}{% set card = review.card %}
 <div class="row" style="margin-bottom:1em;padding-bottom:1em;border-bottom:1px solid #ddd"><div class="col-lg-12">
     <div class="review-header">
-        <img src="/web/bundles/cards/{{ review.card.code }}.png" alt="{{ review.card.name }}" class="pull-right" style="width:100px;margin:0 0 10px 10px">
+        <img src="/bundles/cards/{{ review.card.code }}.png" alt="{{ review.card.name }}" class="pull-right" style="width:100px;margin:0 0 10px 10px">
         <h4 style="text-align:right"><a href="{{ path('cards_zoom',{card_code:review.card.code}) }}#review-{{ review.id }}" data-code="{{ review.card.code }}" class="card-name">{{ review.card.name }}</a></h4>
     </div>
     <article class="review" data-code="{{ review.id }}" id="review-{{ review.id }}">
