--- a/src/AppBundle/Resources/views/Search/display-card.html.twig
+++ b/src/AppBundle/Resources/views/Search/display-card.html.twig
@@ -6,7 +6,9 @@
 	<script src="{{ asset_url }}"></script>
 	{% endjavascripts %}
 	<script type="text/javascript">
+            {% if cards is not empty %}
 	app.user.params.card_id = {{ cards[0].id }};
+        {% endif %}
 	</script>
 {% endblock %}
 
