change Dancing Script

--- a/src/AppBundle/Resources/public/css/style.css
+++ b/src/AppBundle/Resources/public/css/style.css
@@ -31,11 +31,10 @@ body {
     margin: 6px;
 }
 .card-flavor {
-    font: 16px/20px 'Dancing Script', serif;
+    font-style: italic;
 }
 .card-flavor cite {
     white-space: nowrap;
-    font-style: normal;
 }
 .card-flavor cite::before {
     /* en dash followed by non-breaking zero-width space */
