--- a/src/AppBundle/Resources/views/Default/faq.html.twig
+++ b/src/AppBundle/Resources/views/Default/faq.html.twig
@@ -10,7 +10,7 @@
 
 <div class="col-md-8" id="rules">
 
-{% include "AppBundle:Default:faq."~ app.request.locale ~ ".html.twig" %}
+{% include ['AppBundle:Default:faq.'~app.request.locale~'.html.twig', 'AppBundle:Default:faq.en.html.twig']%}
 
 </div>
 </div>
