--- a/src/AppBundle/Resources/views/Default/rulesreference.html.twig
+++ b/src/AppBundle/Resources/views/Default/rulesreference.html.twig
@@ -10,7 +10,7 @@
 
 <div class="col-md-8" id="rules">
 
-{% include "AppBundle:Default:rulesreference."~ app.request.locale ~ ".html.twig" %}
+{% include ['AppBundle:Default:rulesreference.'~app.request.locale~'.html.twig', 'AppBundle:Default:rulesreference.en.html.twig']%}
 
 </div>
 </div>
