--- a/src/AppBundle/Resources/views/footer.en.html.twig
+++ b/src/AppBundle/Resources/views/footer.en.html.twig
@@ -1,14 +1,16 @@
-<div class="row">
+<div class="row" style="margin-bottom:2em">
     <div class="col-xs-12">
-
     <ul class="list-inline">
     <li><a href="{{ path('about') }}">About</a></li>
     <li><a href="{{ path('api_intro') }}">API</a></li>
     <li><a href="{{ path('donators') }}">Donators</a> <span class="fa fa-gift donator" title="The Gracious Donator"></span></li>
     </ul>
+    </div>
+    <div class="col-md-8">
+
 
     <p>
-    Designed and built by Alsciende. 
+    Designed and built by Alsciende.
     Contact: 
     <a href="https://twitter.com/alsciende" title="Twitter"><span class="fa fa-twitter"></span></a>
     <a href="https://reddit.com/user/Alsciende/" title="Reddit"><span class="fa fa-reddit"></span></a>
@@ -16,13 +18,18 @@
     </p>
 
     <p>
-    Please post bug reports and feature requests on <a href="https://github.com/Alsciende/thronesdb/issues">GitHub</a>
+    Cards data maintained with great dedication by <a href="https://github.com/mplain">mplain</a>. 
+    </p>
+
+    <p>
+    Please post bug reports and feature requests on <a href="https://github.com/Alsciende/thronesdb/issues">GitHub</a>.
     </p>
 
     <p>
     You may contribute by giving money on <a href="https://paypal.me/alsciende">Paypal</a>.
     </p>
-
+    </div>
+    <div class="col-md-4">
     <p>
     The information presented on this site about A Game of Thrones: The Card Game Second Edition, both literal and graphical, is copyrighted by Fantasy Flight Games.
     This website is not produced, endorsed, supported, or affiliated with Fantasy Flight Games.
