--- a/src/AppBundle/Resources/views/Default/rulesreference.en.html.twig
+++ b/src/AppBundle/Resources/views/Default/rulesreference.en.html.twig
@@ -109,6 +109,16 @@
 
 <p><strong>Related:</strong> <a href="#Printed">Printed</a>, <a href="#Modifiers">Modifiers</a></p>
 
+<h3 id="Bestow">Bestow</h3>
+
+<p>Bestow is a keyword ability. When a card with bestow (X) enters play, the card's controller may move up to X gold from his or her gold pool to that card. This decision is made immediately upon the card entering play, after resolving any interrupts to the card entering play but prior to triggering any reactions (forced or otherwise) to the card entering play.</p>
+
+<ul>
+<li>  When placing gold using bestow, a player may choose any amount of gold, up to the (X) value of the card with bestow. <em>(For example, when a card with "bestow (2)" enters play, its controller may move 0, 1, or 2 gold from his or her gold pool to that card.)</em></li>
+<li>  Gold on a card is not in its controller's gold pool. Game steps and abilities that use or interact with gold in a player's gold pool do not interact with gold on cards.</li>
+<li>  When gold is discarded from a card with bestow, it is returned to the treasury.</li>
+</ul>
+
 <h3 id="Blank">Blank</h3>
 
 <p>If a card's printed text box is considered "blank" by an ability, that text box is treated as if it did not have any of its printed content. Text and/or icons gained from another source are not blanked.</p>
