Bestow keyword translated into Spanish

--- a/src/AppBundle/Resources/views/Default/rulesreference.es.html.twig
+++ b/src/AppBundle/Resources/views/Default/rulesreference.es.html.twig
@@ -799,6 +799,16 @@ derecha, se considera en pie.</p>
 
 <p>Ver &#8220;<a href="#efectosdesustitución">Efectos de sustitución</a>&#8221;.</p>
 
+<h3 id="Encomienda">Encomienda</h3>
+
+<p>"Encomienda es una palabra clave. Cuando entra en juego una carta con Encomienda X, el jugador que la controla puede trasladar hasta X de Oro desde su suministro de Oro hasta esa carta. Esta decisión se toma en cuanto la carta entra en juego, después de resolver las posibles interrupciones a su entrada, pero antes de activar las reacciones correspondientes (sean obligadas o no) al hecho de que la carta haya entrado en juego.</p>
+
+<ul>
+<li>  Al colocar Oro mediante la Encomienda, un jugador puede elegir cualquier cantidad de Oro que desee, hasta un mínimo igual al valor X de la Encomienda. <em>Por ejemplo, cuando entra en juego una carta con "Encomienda 2", el jugador que la controla puede trasladarle 0, 1 ó 2 de Oro desde su suministro de Oro.</em></li>
+<li>  El Oro que hay sobre una carta no forma parte del suministro de Oro del jugador que la controla. Ningún efecto de juego ni capacidad que utilice o interactúe con el Oro que hay en el suministro de Oro de un jugador afectará al Oro depositado sobre estas cartas.</li>
+<li>  El Oro que se descarta de una carta que posee Encomienda se devuelve a la Tesorería.</li>
+</ul>
+
 <h3 id="estrategiacartasde">Estrategia, cartas de</h3>
 
 <p>Las cartas de Estrategia se colocan a un lado de la carta de
